--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,15 @@
     ],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "lib\\sqlite-jdbc-3.51.1.0.jar"
+        "lib/sqlite-jdbc-3.51.1.0.jar"
+    ],
+    "java.import.exclusions": [
+        "**/bin/**",
+        "**/.git/**",
+        "**/Material/**"
+    ],
+    "java.project.resourceFilters": [
+        "bin",
+        ".git"
     ]
 }
