--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="." excluding="bin/|.git/|Material/|src/|models/"/>
+	<classpathentry kind="src" path="." excluding="bin/|.git/|.vscode/|Material/|src/|models/|.classpath|.project|.gitignore"/>
 	<classpathentry kind="src" path="models"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/sqlite-jdbc-3.51.1.0.jar"/>
