Add Eclipse Java 17 settings and JRE
ensure consistent Java 17 compiler/runtime settings for Eclipse untuk semua member

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,9 @@ target/
 *.class
 
 # Eclipse / Java project metadata (keep root project files)
-.settings/
+!.settings/
+.settings/*
+!.settings/org.eclipse.jdt.core.prefs
 .metadata/
 
 # IDE/editor files
