Persist fines/sessions; extend fine handling
Introduce SQLite-backed persistence and end-to-end fine/session handling. Added SqliteParkingSessionRepository, SqliteUnpaidFineRepository and SqliteFinePolicyRepository (ensureSchema creates vehicles, parking_spots, parking_sessions, fines and admin_settings tables and seeds default policy). Updated UnpaidFineRepository API to accept a fineType, and implemented in-memory and sqlite variants. PaymentService now records per-session fine entries, supports carrying fines forward, and exposes helper to add manual unpaid fines. DefaultFinePolicy now supports policy options A/B/C via a Supplier and implements progressive and per-hour fines. AdminRepo/AdminDashboard now surface fine status and created_at, and AdminRepo logs fine policy changes. MainFrame wires new repositories/services (billing, fine, payment, parking session), updates UI flows: CustomerDashboard adds parking/session start, improved exit flow with pay-or-carry-fines option, a simulation helper for testing, and session syncing with the DB. Misc: .classpath and VSCode settings adjusted; DTO BillingBreakdownDto added convenience getters. Database file and several compiled classes were updated.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,6 @@
     "java.project.resourceFilters": [
         "bin",
         ".git"
-    ]
+    ],
+    "java.debug.settings.onBuildFailureProceed": true
 }
