--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="." excluding="bin/|.git/|.vscode/|Material/|src/|models/|.classpath|.project|.gitignore"/>
+	<classpathentry kind="src" path="." excluding="bin/|.git/|.vscode/|.settings/|Material/|src/|models/|db/|lib/|parking.db|.classpath|.project|.gitignore"/>
 	<classpathentry kind="src" path="models"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17"/>
 	<classpathentry kind="lib" path="lib/sqlite-jdbc-3.51.1.0.jar"/>
